Fix GitHub `build` workflow for linux

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,8 @@ jobs:
                 config:
                     - name: linux
                       arch: x86-64
-                      os: ubuntu-18.04
+                      os: ubuntu-latest
+                      container: ubuntu:18.04
                       target: x86_64-unknown-linux-gnu
                       artifact_suffix: ""
 #                    - name: windows
@@ -32,9 +33,20 @@ jobs:
 
         name: ${{ matrix.config.name }}-${{ matrix.config.arch }}
         runs-on: ${{ matrix.config.os }}
+        container: ${{ matrix.config.container }}
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
+
+            # Since we use pure ubuntu container, it doesn't contain `curl` and `rustup`.
+            # So let's install them manually
+            - name: Install Rust toolchain dependencies
+              if: ${{ matrix.config.container == 'ubuntu:18.04' }}
+              shell: bash
+              run: |
+                  apt-get update && apt-get install -y build-essential curl
+                  curl --proto '=https' --tlsv1.2 --retry 10 --retry-connrefused -fsSL "https://sh.rustup.rs" | sh -s -- --profile minimal --default-toolchain none -y
+                  echo "${CARGO_HOME:-$HOME/.cargo}/bin" >> $GITHUB_PATH
 
             - name: Set up Rust
               uses: actions-rs/toolchain@v1
